Fix spacing for right side elements

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -13,6 +13,7 @@ body {
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
   display: flex;
+  padding: 10px;
 }
 
 .profile-image {
@@ -52,4 +53,6 @@ ul {
 .right {
   display: flex;
   margin-left: auto;
+  gap: 16px;
+  align-items: center;
 }
